Add Nero login translations

--- a/src/main/webapp/WEB-INF/classes/i18n/Messages.properties
+++ b/src/main/webapp/WEB-INF/classes/i18n/Messages.properties
@@ -164,6 +164,12 @@ layout.language.option.en=Inglés
 layout.language.option.es=Español
 layout.language.option.fr=Francés
 layout.login=Iniciar sesión
+nero.login.title=Acceso a Nero
+nero.login.heading=Inicia sesión en Nero
+nero.login.description=Introduce tus credenciales para continuar con tu panel de Nero.
+nero.login.email=Correo electrónico
+nero.login.password=Contraseña
+nero.login.submit=Acceder
 layout.logout=Cerrar sesión
 layout.profile=Perfil
 layout.register=Registrarse
