--- a/src/main/webapp/WEB-INF/classes/i18n/Messages_en.properties
+++ b/src/main/webapp/WEB-INF/classes/i18n/Messages_en.properties
@@ -164,6 +164,12 @@ layout.language.option.en=English
 layout.language.option.es=Spanish
 layout.language.option.fr=French
 layout.login=Sign in
+nero.login.title=Nero access
+nero.login.heading=Sign in to Nero
+nero.login.description=Enter your credentials to continue to your Nero dashboard.
+nero.login.email=Email address
+nero.login.password=Password
+nero.login.submit=Sign in
 layout.logout=Sign out
 layout.profile=Profile
 layout.register=Register
