--- a/src/main/webapp/WEB-INF/classes/i18n/Messages_es.properties
+++ b/src/main/webapp/WEB-INF/classes/i18n/Messages_es.properties
@@ -164,6 +164,12 @@ layout.language.option.en=Ingl\u00E9s
 layout.language.option.es=Espa\u00F1ol
 layout.language.option.fr=Franc\u00E9s
 layout.login=Iniciar sesi\u00F3n
+nero.login.title=Acceso a Nero
+nero.login.heading=Inicia sesi\u00F3n en Nero
+nero.login.description=Introduce tus credenciales para continuar con tu panel de Nero.
+nero.login.email=Correo electr\u00F3nico
+nero.login.password=Contrase\u00F1a
+nero.login.submit=Acceder
 layout.logout=Cerrar sesi\u00F3n
 layout.profile=Perfil
 layout.register=Registrarse
