--- a/src/main/webapp/WEB-INF/classes/i18n/Messages_fr.properties
+++ b/src/main/webapp/WEB-INF/classes/i18n/Messages_fr.properties
@@ -152,6 +152,12 @@ layout.language.option.en=Anglais
 layout.language.option.es=Espagnol
 layout.language.option.fr=Fran\u00E7ais
 layout.login=Se connecter
+nero.login.title=Accès à Nero
+nero.login.heading=Connectez-vous à Nero
+nero.login.description=Saisissez vos identifiants pour accéder à votre tableau de bord Nero.
+nero.login.email=Adresse e-mail
+nero.login.password=Mot de passe
+nero.login.submit=Se connecter
 layout.logout=Se d\u00E9connecter
 layout.profile=Profil
 layout.register=Cr\u00E9er un compte
