Add translations for Nero appointment pages

--- a/src/main/webapp/WEB-INF/classes/i18n/Messages.properties
+++ b/src/main/webapp/WEB-INF/classes/i18n/Messages.properties
@@ -170,6 +170,15 @@ nero.login.description=Introduce tus credenciales para continuar con tu panel de
 nero.login.email=Correo electrónico
 nero.login.password=Contraseña
 nero.login.submit=Acceder
+nero.appointment.title=Solicitar una cita en Nero
+nero.appointment.heading=Programa tu cita con Nero
+nero.appointment.welcome=Hola,
+nero.appointment.success=Cita creada correctamente
+nero.appointment.headquarters=Sede
+nero.appointment.date=Fecha
+nero.appointment.time=Hora
+nero.appointment.details=Detalles adicionales
+nero.appointment.submit=Confirmar cita
 layout.logout=Cerrar sesión
 layout.profile=Perfil
 layout.register=Registrarse
