--- a/src/main/webapp/WEB-INF/classes/i18n/Messages_en.properties
+++ b/src/main/webapp/WEB-INF/classes/i18n/Messages_en.properties
@@ -170,6 +170,15 @@ nero.login.description=Enter your credentials to continue to your Nero dashboard
 nero.login.email=Email address
 nero.login.password=Password
 nero.login.submit=Sign in
+nero.appointment.title=Request a Nero appointment
+nero.appointment.heading=Schedule your Nero appointment
+nero.appointment.welcome=Hello,
+nero.appointment.success=Appointment created successfully
+nero.appointment.headquarters=Headquarters
+nero.appointment.date=Date
+nero.appointment.time=Time
+nero.appointment.details=Additional details
+nero.appointment.submit=Book appointment
 layout.logout=Sign out
 layout.profile=Profile
 layout.register=Register
