--- a/src/main/webapp/WEB-INF/classes/i18n/Messages_fr.properties
+++ b/src/main/webapp/WEB-INF/classes/i18n/Messages_fr.properties
@@ -158,6 +158,15 @@ nero.login.description=Saisissez vos identifiants pour accéder à votre tableau
 nero.login.email=Adresse e-mail
 nero.login.password=Mot de passe
 nero.login.submit=Se connecter
+nero.appointment.title=Demander un rendez-vous Nero
+nero.appointment.heading=Planifiez votre rendez-vous Nero
+nero.appointment.welcome=Bonjour,
+nero.appointment.success=Rendez-vous cr\u00E9\u00E9 avec succ\u00E8s
+nero.appointment.headquarters=Agence
+nero.appointment.date=Date
+nero.appointment.time=Heure
+nero.appointment.details=D\u00E9tails suppl\u00E9mentaires
+nero.appointment.submit=Confirmer le rendez-vous
 layout.logout=Se d\u00E9connecter
 layout.profile=Profil
 layout.register=Cr\u00E9er un compte
