--- a/src/main/webapp/WEB-INF/classes/i18n/Messages_es.properties
+++ b/src/main/webapp/WEB-INF/classes/i18n/Messages_es.properties
@@ -29,7 +29,16 @@ vehicle.catalog.feature.currentHeadquarters.label=Sede actual
 vehicle.catalog.button.viewDetails=Ver detalles
 vehicle.card.status=Estado
 vehicle.card.headquarters=Sede
+# Archivo: src/main/resources/i18n/Messages.properties (o Messages_es.properties)
 
+# Clave de la página de citas
+nero.appointment.header=Solicitud de Cita Veterinaria
+nero.appointment.title=Agendar Cita
+nero.appointment.headquarters=Sede
+nero.appointment.date=Fecha
+nero.appointment.time=Hora
+nero.appointment.details=Detalles de la Cita
+nero.appointment.submit=Solicitar Cita
 common.home.hero.stat3.label=Veh\u00EDculos en flota
 common.home.hero.stat3.value=120
 common.home.hero.subtitle=Reserva online, confirma tu recogida y disfruta de la ruta con asistencia humana en cada paso.
